test_fm/_test19.ref
Error: redeclaration of non-static superclass method 'x' as static in '_test19.ref' on line 11