test_fm/_test19.nj
//
// name already used for a non-static method
//

public class Main extends Object {
  Integer x() {
  }
}

class Aux extends Main {
  static Integer x() {
  }
}
